--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,23 @@
-<div style="text-align: center">
-  <h1>
+<mat-toolbar color="primary">
+  <span>
     LocalCast Weather
-  </h1>
-  <div>Your city, your forecase, right now!</div>
-  <h2>Current Weather</h2>
-  <app-current-weather></app-current-weather>
+  </span>
+</mat-toolbar>
+<div fxLayoutAlign="center">
+  <div class="mat-caption vertical-margin">Your city, your forecase, right now!</div>
+</div>
+
+<div fxLayout="row" fxLayoutAlign="center center">
+  <div fxFlex></div>
+  <mat-card fxFlex="400px">
+    <mat-card-header>
+      <mat-card-title>
+        <div class="mat-headline">Current Weather</div>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-current-weather></app-current-weather>
+    </mat-card-content>
+  </mat-card>
+  <div fxFlex></div>
 </div>
