--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,13 +1,20 @@
 <div *ngIf="current">
-  <div>
-    <span style="margin-right:5px;">{{current.city}}, {{current.country}}</span>
-    <span>{{current.date | date:'fullDate'}}</span>
+  <div fxLayout="row">
+    <div fxFlex="66%" class="mat-title no-margin">{{current.city}}, {{current.country}}</div>
+    <div fxFlex class="mat-subtitle-2 no-margin right">
+      {{current.date | date:'EEEE MMM d' | dateSequence }}
+    </div>
   </div>
-  <div>
-    <img [src]='current.image' style="height: 35px; margin-right:5px; margin-top:5px; margin-bottom:-12px;">
-    <span>{{current.temperature | number:'1.0-0'}} &#8451;</span>
-    <span>
-      {{current.description | uppercase }}
-    </span>
+  <div fxLayout="row">
+    <div fxFlex="66%">
+      <img [src]='current.image' style="zoom:1.75">
+    </div>
+    <div fxFlex class="right mat-display-3 no-margin">
+      {{current.temperature | number:'1.0-0'}}
+      <span class="mat-display-1 unit">&#8451;</span>
+    </div>
+  </div>
+  <div class="center mat-caption">
+    {{current.description | capital }}
   </div>
 </div>
